--- a/src/Sass/components/Buttons.scss
+++ b/src/Sass/components/Buttons.scss
@@ -8,7 +8,9 @@
     margin-left: 1rem;
     @include area(0.9rem, 30px, 0.7rem 1.5rem, white, var(--color-secondary));
     
-    
+    &:focus {
+        outline: none;i
+    }
 
     &--link {
         @include link(white);
