--- a/src/Sass/components/Buttons.scss
+++ b/src/Sass/components/Buttons.scss
@@ -9,7 +9,7 @@
     @include area(0.9rem, 30px, 0.7rem 1.5rem, white, var(--color-secondary));
     
     &:focus {
-        outline: none;i
+        outline: none;
     }
 
     &--link {
